--- a/presentations/2017-03-17-MidwestPHP/index.html
+++ b/presentations/2017-03-17-MidwestPHP/index.html
@@ -329,7 +329,7 @@ Outline:
 
           <section>
             <p>Test doubles are the tools we use<br>
-            to test code that has shared state and/or side effects.</p>
+            to test code that has shared state or side effects.</p>
             <aside class="notes">
               <ul>
               </ul>
