Last minute changes

--- a/presentations/2017-03-17-MidwestPHP/index.html
+++ b/presentations/2017-03-17-MidwestPHP/index.html
@@ -108,6 +108,12 @@ Outline:
           </section>
 
           <section>
+            <h2>Unit testing is a tool that can help you write excellent code.</h2>
+            <p class="fragment">...sometimes</p>
+            <p class="fragment">...I'll help you understand when</p>
+          </section>
+
+          <section>
             <h1>Overview</h1>
             <ol style="list-style-type:upper-roman">
               <li class="fragment">Definition</li>
@@ -1315,6 +1321,7 @@ interface MaintenanceModePageInterface {
             <p>Feedback is welcome:<br><a href="https://legacy.joind.in/20320">legacy.joind.in/20320</a></p>
             <br>
             <p>Slides are available:<br><a href="https://github.com/josephdpurcell/principles-of-unit-testing">github.com/josephdpurcell/principles-of-unit-testing</a></p>
+            <p>Let's talk! @josephdpurcell</p>
           </section>
 
           <section>
