Add BADCamp conference link

--- a/presentations/index.html
+++ b/presentations/index.html
@@ -11,7 +11,7 @@
   <li>2017
     <ul>
       <li>March 17 - <a href="2017-03-17-MidwestPHP/index.html">Midwest PHP</a> (<a href="https://2017.midwestphp.org/sessions.html#principles-of-unit-testing">conference link</a>, <a href="https://legacy.joind.in/talk/view/20320">reviews</a>)</li>
-      <li>October 20 - <a href="2017-10-20-BADCamp/index.html">BADCamp</a> (<a href="">conference link @TODO</a>)</li>
+      <li>October 20 - <a href="2017-10-20-BADCamp/index.html">BADCamp</a> (<a href="https://2017.badcamp.net/session/coding-development/intermediate/principles-unit-testing">conference link</a>)</li>
     </ul>
   </li>
 </ul>
