Final changes to BADCamp slides

--- a/presentations/2017-10-20-BADCamp/index.html
+++ b/presentations/2017-10-20-BADCamp/index.html
@@ -1502,7 +1502,7 @@ interface MaintenanceModePageInterface {
           </section>
 
           <section>
-            <h2 style="font-size:150%">Principles of unit testing:<br>test doubles and solitary vs sociable</h3>
+            <h2 style="font-size:140%">Remember the Principles of Unit Testing:<br>test doubles&nbsp;&nbsp;&nbsp;and&nbsp;&nbsp;&nbsp;solitary vs sociable</h3>
             <img src="assets/wonder-woman-double.jpg" style="border:none;max-width:43%;float:left">
             <img src="assets/bay-bridge.jpg" style="border:none;max-width:50%;float:right">
           </section>
