--- a/presentations/2019-03-21-MidCamp/index.html
+++ b/presentations/2019-03-21-MidCamp/index.html
@@ -75,6 +75,7 @@ Outline:
   2. Definition
     a. What is a unit test?
     b. What is a unit?
+    c. What is a unit specification?
     c. What is a boundary?
     d. What is a test double?
     e. How does unit test compare to others? (Note: you can do all these w PHPUnit)
@@ -100,13 +101,13 @@ Outline:
                 <p>by Joseph D. Purcell</p>
               </div>
               <div>
-                <p>at DrupalCon Nashville</p>
+                <p>at MidCamp</p>
               </div>
               <div>
                 <small><a href="https://twitter.com/josephdpurcell">@josephdpurcell</a></small>
               </div>
               <div>
-                <small>April 11, 2018</small>
+                <small>March 21, 2019</small>
               </div>
             </div>
           </section>
@@ -115,8 +116,8 @@ Outline:
             <h2>Who am I?</h2>
             <ul>
               <li>PHP developer since 2003</li>
-              <li>Development Team Lead at Digital Bridge Solutions</li>
-              <li>Making a difference for B2B companies in the midwest</li>
+              <li>Lead Architect at Bounteous</li>
+              <li>@todo company statement</li>
             </ul>
             <aside class="notes">
               <ul>
@@ -129,11 +130,9 @@ Outline:
             <h2>Who are you?</h2>
             <aside class="notes">
               <ul>
-                <li>I'm not packaging this as an entertaining talk--we are here to learn and challenge ideas</li>
-                <li>You are a professional in the web industry</li>
-                <li>You have experienced something like unit testing and have some idea of what it is</li>
-                <li>You are open to challenging how you think about it</li>
-                <li>This will be more advanced for some, this will be more introductory for some--but, there should be a call to action for everyone</li>
+                <li>you care about writing quality software</li>
+                <li>this won't be entertaining, its the hard work of learning</li>
+                <li>for some, advanced, some indtroductory, but I'm certain everyone will come away with new thoughts about unit testing</li>
               </ul>
             </aside>
           </section>
