Switch to Bounteous theme

--- a/presentations/2019-03-21-MidCamp/index.html
+++ b/presentations/2019-03-21-MidCamp/index.html
@@ -7,7 +7,7 @@
     <title>Principles of Unit Testing</title>
 
     <link rel="stylesheet" href="css/reveal.css">
-    <link rel="stylesheet" href="css/theme/dbridge.css">
+    <link rel="stylesheet" href="css/theme/bounteous.css">
 
     <!-- Theme used for syntax highlighting of code -->
     <link rel="stylesheet" href="lib/css/zenburn.css">
@@ -1692,9 +1692,9 @@ interface MaintenanceModePageInterface {
         ]
       });
     </script>
-    <aside class="db-logo-footer">
-      <a href="http://www.dbridgesolutions.com/">
-        <img src="media/images/db.png">
+    <aside class="logo-footer">
+      <a href="https://www.bounteous.com/">
+        <img src="media/images/bounteous.svg">
       </a>
     </aside>
   </body>
