--- a/presentations/2019-03-21-MidCamp/demo.html
+++ b/presentations/2019-03-21-MidCamp/demo.html
@@ -15,7 +15,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/dbridge.css" id="theme">
+		<link rel="stylesheet" href="css/theme/bounteous.css" id="theme">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -406,8 +406,8 @@ Reveal.addEventListener( 'customevent', function() {
 
 		</script>
 		<aside class="db-logo-footer">
-			<a href="http://www.dbridgesolutions.com/">
-				<img src="media/images/db.png">
+      <a href="https://www.bounteous.com/">
+        <img src="media/images/bounteous.svg">
 			</a>
 		</aside>
 	</body>
