Were hiring, thank you and contributor slides

--- a/presentations/2019-03-21-MidCamp/index.html
+++ b/presentations/2019-03-21-MidCamp/index.html
@@ -119,6 +119,10 @@ Outline:
               <li>Lead Architect at Bounteous</li>
               <li>@todo company statement</li>
             </ul>
+            <br/>
+            <p>
+              <small><i>We're hiring: <a href="https://www.bounteous.com/careers/">bounteous.com/careers</a></i></small>
+            </p>
             <aside class="notes">
               <ul>
                 <li>we're hiring</li>
@@ -1614,10 +1618,22 @@ interface MaintenanceModePageInterface {
 
           <section>
             <h2>Thank you!</h2>
-            <br>
+            <p>Please provide feedback:<br><a href="https://www.midcamp.org/2019/topic-proposal/principles-unit-testing">midcamp.org/2019/topic-proposal/principles-unit-testing</a></p>
+            <br/>
+            <h4>The top rated sessions will be captioned,<br>courtesy of Clarity Partners!</h4>
+            <br/>
             <p>Slides are available:<br><a href="https://github.com/josephdpurcell/principles-of-unit-testing">github.com/josephdpurcell/principles-of-unit-testing</a></p>
-            <p>Rate this session:<br><a href="https://events.drupal.org/nashville2018/sessions/principles-unit-testing">events.drupal.org/nashville2018</a></p>
-            <p>Let's talk! @josephdpurcell</p>
+            <p>Let's talk! <a href="https://twitter.com/josephdpurcell">@josephdpurcell</a></p>
+          </section>
+
+          <section>
+            <h2>Contribution Day</h2>
+            <h3>Saturday 10am to 4pm</h3>
+            <br>
+            <p><b>You don't have to know code to give back!</b></p>
+            <br>
+            <p><u>New Contributor training</u> 10am to Noon </p>
+            <p> with AmyJune Hineline of Kanopi Studios</p>
           </section>
 
           <section>
